# -girvan-newman_opencl

./: CMakeLists.txt  README.md  dijkstra.cl  edge_betweenness.cl  graph_kernel.h  main.cpp  open_cl_util.cpp  open_cl_util.h
